@@ -2,6 +2,8 @@ package dev.ftb.mods.ftbic.datagen;
 
 import dev.ftb.mods.ftbic.FTBIC;
 import dev.ftb.mods.ftbic.item.FTBICItems;
+import dev.ftb.mods.ftbic.material.Material;
+import dev.ftb.mods.ftbic.material.MaterialComponent;
 import dev.ftb.mods.ftbic.recipe.AntimatterBoostRecipe;
 import dev.ftb.mods.ftbic.recipe.BasicGeneratorFuelRecipe;
 import dev.ftb.mods.ftbic.recipe.FTBICRecipes;
@@ -10,9 +12,7 @@ import dev.ftb.mods.ftbic.recipe.MachineRecipeType;
 import dev.ftb.mods.ftbic.util.FluidCellIngredient;
 import dev.ftb.mods.ftbic.util.IngredientWithCount;
 import dev.ftb.mods.ftbic.util.StackWithChance;
-import dev.ftb.mods.ftbmaterials.data.ComponentsAvailableCondition;
 import net.minecraft.core.HolderLookup;
-import net.minecraft.core.HolderSet;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.core.registries.Registries;
 import net.minecraft.data.PackOutput;
@@ -43,11 +43,6 @@ import net.minecraft.world.item.crafting.SmeltingRecipe;
 import net.minecraft.world.item.crafting.SmokingRecipe;
 import net.minecraft.world.level.material.Fluid;
 import net.minecraft.world.level.material.Fluids;
-import net.neoforged.neoforge.common.conditions.AndCondition;
-import net.neoforged.neoforge.common.conditions.ICondition;
-import net.neoforged.neoforge.common.conditions.NotCondition;
-import net.neoforged.neoforge.common.conditions.OrCondition;
-import net.neoforged.neoforge.common.conditions.TagEmptyCondition;
 import net.neoforged.neoforge.common.crafting.CompoundIngredient;
 
 import java.util.ArrayList;
@@ -60,24 +55,19 @@ import java.util.concurrent.CompletableFuture;
 public class FTBICRecipeProvider extends RecipeProvider {
 
 	private static final String[] MACERATE_INGOTS = {
-			"aluminum", "antimony", "brass", "bronze", "chromium", "constantan", "copper",
-			"electrum", "enderium", "gold", "graphite", "invar", "iridium", "iron", "lead",
-			"lumium", "netherite", "nickel", "osmium", "platinum", "plutonium", "refined_glowstone",
-			"refined_obsidian", "silicon", "silver", "stainless_steel", "steel", "tin", "titanium",
-			"tungsten", "uranium", "zinc",
+			"aluminum", "bronze", "constantan", "copper", "electrum", "enderium", "gold", "invar",
+			"iridium", "iron", "lead", "netherite", "nickel", "plutonium", "silver", "steel", "tin",
+			"uranium",
 	};
 
 	private static final String[] MACERATE_ORES = {
-			"aluminum", "antimony", "apatite", "bauxite", "cinnabar", "coal", "copper", "diamond",
-			"emerald", "fluorite", "gold", "iridium", "iron", "lapis_lazuli", "lead", "monazite",
-			"nickel", "niter", "osmium", "platinum", "quartz", "ruby", "salt", "sapphire", "silver",
-			"sulfur", "tin", "titanium", "tungsten", "uranium", "zinc",
+			"aluminum", "coal", "copper", "diamond", "emerald", "gold", "iridium", "iron",
+			"lapis_lazuli", "lead", "nickel", "quartz", "silver", "tin", "uranium",
 	};
 
 	private static final String[] MACERATE_RAW = {
-			"aluminum", "antimony", "brass", "chromium", "copper", "gold", "iridium", "iron",
-			"lead", "nickel", "osmium", "platinum", "plutonium", "silicon", "silver", "tin",
-			"titanium", "tungsten", "uranium", "zinc",
+			"aluminum", "copper", "gold", "iridium", "iron", "lead", "nickel", "plutonium",
+			"silver", "tin", "uranium",
 	};
 
 	public FTBICRecipeProvider(HolderLookup.Provider registries, RecipeOutput output) {
@@ -94,6 +84,7 @@ public class FTBICRecipeProvider extends RecipeProvider {
 		compressingRecipes();
 		separatingRecipes();
 		reprocessingRecipes();
+		alloySmelterRecipes();
 		antimatterBoostRecipes();
 		smeltingRecipes();
 		blastingRecipes();
@@ -119,33 +110,33 @@ public class FTBICRecipeProvider extends RecipeProvider {
 	private void fuel(String name, Ingredient ingredient, int ticks) {
 		BasicGeneratorFuelRecipe recipe = new BasicGeneratorFuelRecipe(ingredient, ticks);
 		ResourceKey<Recipe<?>> key = recipeKey("basic_generator_fuel/" + name);
-		output.accept(key, recipe, null, conditionsFor(ingredient));
+		output.accept(key, recipe, null);
 	}
 
 
 	private void maceratingRecipes() {
 		macerate("blaze_powder", commonTag("rods/blaze"), stack(Items.BLAZE_POWDER, 5));
 		macerate("bone_meal", Ingredient.of(Items.BONE), stack(Items.BONE_MEAL, 5));
-		macerate("charcoal_dust", Ingredient.of(Items.CHARCOAL), ftbmat("charcoal_dust", 1));
-		macerate("coal_dust", Ingredient.of(Items.COAL), ftbmat("coal_dust", 1));
+		macerate("charcoal_dust", Ingredient.of(Items.CHARCOAL), ftbicStack("charcoal_dust", 1));
+		macerate("coal_dust", Ingredient.of(Items.COAL), ftbicStack("coal_dust", 1));
 		macerate("cobblestone", commonTag("stones"), stack(Items.COBBLESTONE, 1));
 		macerate("gravel", commonTag("cobblestones"), stack(Items.GRAVEL, 1));
-		macerate("obsidian_dust", commonTag("obsidians"), ftbmat("obsidian_dust", 1));
+		macerate("obsidian_dust", commonTag("obsidians"), ftbicStack("obsidian_dust", 1));
 		macerate("sand", commonTag("gravels"), stack(Items.SAND, 1));
 		macerate("snowball", Ingredient.of(Items.SNOW_BLOCK), stack(Items.SNOWBALL, 1));
 		macerate("string", tag(ItemTags.WOOL), stack(Items.STRING, 4));
 
-		macerate("gems/diamond_to_dust", commonTag("gems/diamond"), ftbmat("diamond_dust", 1));
+		macerate("gems/diamond_to_dust", commonTag("gems/diamond"), ftbicStack("diamond_dust", 1));
 
 		for (String m : MACERATE_INGOTS) {
-			macerate("ingots/" + m + "_to_dust", commonTag("ingots/" + m), ftbmat(m + "_dust", 1));
+			macerate("ingots/" + m + "_to_dust", commonTag("ingots/" + m), ftbicStack(m + "_dust", 1));
 		}
 		for (String m : MACERATE_ORES) {
 			String dust = oreDustName(m);
-			macerate("ores/" + m + "_to_dust", commonTag("ores/" + m), ftbmat(dust, 2));
+			macerate("ores/" + m + "_to_dust", commonTag("ores/" + m), ftbicStack(dust, 2));
 		}
 		for (String m : MACERATE_RAW) {
-			ItemStackTemplate dust = ftbmat(m + "_dust", 1);
+			ItemStackTemplate dust = ftbicStack(m + "_dust", 1);
 			macerateRaw("raw_materials/" + m + "_to_dust", commonTag("raw_materials/" + m),
 					dust, dust, 0.35);
 		}
@@ -160,15 +151,19 @@ public class FTBICRecipeProvider extends RecipeProvider {
 		macerate("ores/redstone_to_dust", commonTag("ores/redstone"), stack(Items.REDSTONE, 6));
 
 		// IC2C: storage-block → 9 dust (direct dust extraction from compact storage)
-		macerate("storage_blocks/coal_to_dust", Ingredient.of(Items.COAL_BLOCK), ftbmat("coal_dust", 9));
+		macerate("storage_blocks/coal_to_dust", Ingredient.of(Items.COAL_BLOCK), ftbicStack("coal_dust", 9));
 		for (String m : MACERATE_INGOTS) {
-			macerate("storage_blocks/" + m + "_to_dust", commonTag("storage_blocks/" + m), ftbmat(m + "_dust", 9));
+			macerate("storage_blocks/" + m + "_to_dust", commonTag("storage_blocks/" + m), ftbicStack(m + "_dust", 9));
 		}
 		for (String m : MACERATE_RAW) {
-			macerate("storage_blocks/raw_" + m + "_to_dust", commonTag("storage_blocks/raw_" + m), ftbmat(m + "_dust", 9));
+			macerate("storage_blocks/raw_" + m + "_to_dust", commonTag("storage_blocks/raw_" + m), ftbicStack(m + "_dust", 9));
 		}
 
 		macerateChance("sticky_resin_from_log", tag(ItemTags.LOGS), 1, ftbicStack("sticky_resin", 1), 0.25D);
+
+		macerate("advanced_alloy_to_mixed_metal_blend",
+				Ingredient.of(FTBICItems.ADVANCED_ALLOY.item.get()),
+				new ItemStackTemplate(FTBICItems.MIXED_METAL_BLEND.item.get(), 1));
 	}
 
 	private void macerate(String path, Ingredient input, ItemStackTemplate result) {
@@ -181,8 +176,7 @@ public class FTBICRecipeProvider extends RecipeProvider {
 				List.of(),
 				1D,
 				false);
-		output.accept(recipeKey("macerating/" + path), recipe, null,
-				withOutputConditions(conditionsFor(input), result));
+		output.accept(recipeKey("macerating/" + path), recipe, null);
 	}
 
 	private void macerateRaw(String path, Ingredient input, ItemStackTemplate primary, ItemStackTemplate bonus, double chance) {
@@ -195,8 +189,7 @@ public class FTBICRecipeProvider extends RecipeProvider {
 				List.of(),
 				1D,
 				false);
-		output.accept(recipeKey("macerating/" + path), recipe, null,
-				withOutputConditions(conditionsFor(input), primary, bonus));
+		output.accept(recipeKey("macerating/" + path), recipe, null);
 	}
 
 	private void macerateChance(String path, Ingredient input, int inputCount, ItemStackTemplate result, double chance) {
@@ -209,25 +202,20 @@ public class FTBICRecipeProvider extends RecipeProvider {
 				List.of(),
 				1D,
 				false);
-		output.accept(recipeKey("macerating/" + path), recipe, null,
-				withOutputConditions(conditionsFor(input), result));
+		output.accept(recipeKey("macerating/" + path), recipe, null);
 	}
 
 
 	private static final String[] EXTRUDE_INGOT_METALS = {
-			"aluminum", "brass", "bronze", "chromium", "constantan", "copper", "electrum",
-			"enderium", "gold", "graphite", "invar", "iridium", "iron", "lead", "lumium",
-			"netherite", "nickel", "osmium", "platinum", "plutonium", "refined_glowstone",
-			"silicon", "silver", "stainless_steel", "steel", "tin", "titanium", "tungsten",
-			"uranium", "zinc",
+			"aluminum", "bronze", "constantan", "copper", "electrum", "enderium", "gold", "invar",
+			"iridium", "iron", "lead", "netherite", "nickel", "plutonium", "silver", "steel", "tin",
+			"uranium",
 	};
 
 	private static final String[] EXTRUDE_PLATE_ROD_MATERIALS = {
-			"aluminum", "brass", "bronze", "chromium", "constantan", "copper", "diamond",
-			"electrum", "enderium", "gold", "graphite", "invar", "iridium", "iron", "lead",
-			"lumium", "netherite", "nickel", "obsidian", "osmium", "platinum", "plutonium",
-			"quartz", "refined_glowstone", "silicon", "silver", "stainless_steel", "steel",
-			"tin", "titanium", "tungsten", "uranium", "zinc",
+			"aluminum", "bronze", "constantan", "copper", "electrum", "enderium", "gold",
+			"invar", "iridium", "iron", "lead", "netherite", "nickel", "obsidian", "plutonium",
+			"silver", "steel", "tin", "uranium",
 	};
 
 	private void extrudingRecipes() {
@@ -246,6 +234,8 @@ public class FTBICRecipeProvider extends RecipeProvider {
 			extrude("rods/" + m + "_to_" + m + "_wire", commonTag("rods/" + m), 1,
 					resolveShape(m, "wire"), 2);
 		}
+		extrude("dusts/obsidian_to_obsidian_rod", commonTag("dusts/obsidian"), 1,
+				ftbicStack("obsidian_rod", 1), 2);
 	}
 
 	private void extrude(String path, Ingredient input, int inputCount, ItemStackTemplate result, int outputCount) {
@@ -259,15 +249,11 @@ public class FTBICRecipeProvider extends RecipeProvider {
 				List.of(),
 				1D,
 				false);
-		output.accept(recipeKey("extruding/" + path), recipe, null,
-				withOutputConditions(conditionsFor(input), scaled));
+		output.accept(recipeKey("extruding/" + path), recipe, null);
 	}
 
 	private ItemStackTemplate resolveShape(String metal, String shape) {
-		if (metal.equals("enderium")) {
-			return modStack("ftbic:enderium_" + shape, 1);
-		}
-		return ftbmat(metal + "_" + shape, 1);
+		return ftbicStack(metal + "_" + shape, 1);
 	}
 
 
@@ -284,8 +270,7 @@ public class FTBICRecipeProvider extends RecipeProvider {
 					List.of(),
 					1D,
 					false);
-			output.accept(recipeKey("rolling/ingots/" + m + "_to_" + m + "_plate"), recipe, null,
-					withOutputConditions(conditionsFor(input), plate));
+			output.accept(recipeKey("rolling/ingots/" + m + "_to_" + m + "_plate"), recipe, null);
 		}
 	}
 
@@ -310,7 +295,8 @@ public class FTBICRecipeProvider extends RecipeProvider {
 		compress("packed_ice_to_blue_ice", Ingredient.of(Items.PACKED_ICE), 1, stack(Items.BLUE_ICE, 1));
 		compress("blaze_powder_to_blaze_rod", Ingredient.of(Items.BLAZE_POWDER), 4, stack(Items.BLAZE_ROD, 1));
 		compress("flint_to_gunpowder", Ingredient.of(Items.FLINT), 4, stack(Items.GUNPOWDER, 1));
-		compress("diamond_dust_to_diamond", i("ftbmaterials:diamond_dust"), 2, stack(Items.DIAMOND, 1));
+		compress("diamond_dust_to_diamond", i("ftbic:diamond_dust"), 2, stack(Items.DIAMOND, 1));
+		compress("obsidian_dust_to_obsidian_plate", i("ftbic:obsidian_dust"), 1, ftbicStack("obsidian_plate", 1));
 
 		compress("rubber_from_resin", i("ftbic:sticky_resin"), 1, ftbicStack("rubber", 3));
 		compress("rubber_from_latex", i("ftbic:latex_ball"), 2, ftbicStack("rubber", 1));
@@ -326,20 +312,17 @@ public class FTBICRecipeProvider extends RecipeProvider {
 				List.of(),
 				1D,
 				false);
-		output.accept(recipeKey("compressing/" + path), recipe, null,
-				withOutputConditions(conditionsFor(input), result));
+		output.accept(recipeKey("compressing/" + path), recipe, null);
 	}
 
 
 	private void separatingRecipes() {
-		Item silicon = BuiltInRegistries.ITEM.getValue(Identifier.fromNamespaceAndPath("ftbmaterials", "silicon_gem"));
+		Item silicon = BuiltInRegistries.ITEM.getValue(FTBIC.id("silicon_gem"));
 		separate("flint", commonTag("gravels"), 1, Arrays.asList(out(Items.FLINT, 1, 1D)));
-		if (silicon != null && silicon != Items.AIR) {
-			separate("silicon_from_quartz", commonTag("gems/quartz"), 1, Arrays.asList(out(silicon, 3, 1D)));
-			separate("silicon_from_sand", tag(ItemTags.SAND), 1, List.of(
-					out(silicon, 1, 0.2D),
-					out(silicon, 1, 0.05D)));
-		}
+		separate("silicon_from_quartz", commonTag("gems/quartz"), 1, Arrays.asList(out(silicon, 3, 1D)));
+		separate("silicon_from_sand", tag(ItemTags.SAND), 1, List.of(
+				out(silicon, 1, 0.2D),
+				out(silicon, 1, 0.05D)));
 		separate("slime_ball", Ingredient.of(Items.MAGMA_CREAM), 1, List.of(
 				out(Items.SLIME_BALL, 1, 1D),
 				out(Items.BLAZE_POWDER, 1, 0.25D)));
@@ -409,8 +392,7 @@ public class FTBICRecipeProvider extends RecipeProvider {
 				1D,
 				false);
 		ItemStackTemplate[] templates = cleaned.stream().map(StackWithChance::template).toArray(ItemStackTemplate[]::new);
-		output.accept(recipeKey("separating/" + path), recipe, null,
-				withOutputConditions(conditionsFor(input), templates));
+		output.accept(recipeKey("separating/" + path), recipe, null);
 	}
 
 	private void separateMulti(String path, List<IngredientWithCount> inputs, List<StackWithChance> outputs) {
@@ -428,8 +410,7 @@ public class FTBICRecipeProvider extends RecipeProvider {
 				false);
 		ItemStackTemplate[] templates = cleaned.stream().map(StackWithChance::template).toArray(ItemStackTemplate[]::new);
 		Ingredient[] ingredients = inputs.stream().map(IngredientWithCount::ingredient).toArray(Ingredient[]::new);
-		output.accept(recipeKey("separating/" + path), recipe, null,
-				withOutputConditions(conditionsFor(ingredients), templates));
+		output.accept(recipeKey("separating/" + path), recipe, null);
 	}
 
 
@@ -445,7 +426,74 @@ public class FTBICRecipeProvider extends RecipeProvider {
 				List.of(),
 				1D,
 				false);
-		output.accept(recipeKey("reprocessing/scrappable_to_scrap"), recipe, null, conditionsFor(input));
+		output.accept(recipeKey("reprocessing/scrappable_to_scrap"), recipe, null);
+	}
+
+
+	private void alloySmelterRecipes() {
+		alloy("netherite_ingot",
+				List.of(new IngredientWithCount(commonTag("ingots/gold"), 2),
+						new IngredientWithCount(Ingredient.of(Items.NETHERITE_SCRAP), 2)),
+				new ItemStackTemplate(Items.NETHERITE_INGOT, 1));
+		alloy("enderium_ingot",
+				List.of(new IngredientWithCount(commonTag("ingots/lead"), 3),
+						new IngredientWithCount(commonTag("dusts/diamond"), 1),
+						new IngredientWithCount(Ingredient.of(Items.ENDER_PEARL), 2)),
+				ftbicStack("enderium_ingot", 2));
+		alloy("bronze_ingot",
+				List.of(new IngredientWithCount(commonTag("ingots/copper"), 3),
+						new IngredientWithCount(commonTag("ingots/tin"), 1)),
+				ftbicStack("bronze_ingot", 4));
+		alloy("electrum_ingot",
+				List.of(new IngredientWithCount(commonTag("ingots/silver"), 1),
+						new IngredientWithCount(commonTag("ingots/gold"), 1)),
+				ftbicStack("electrum_ingot", 2));
+		alloy("invar_ingot",
+				List.of(new IngredientWithCount(commonTag("ingots/iron"), 2),
+						new IngredientWithCount(commonTag("ingots/nickel"), 1)),
+				ftbicStack("invar_ingot", 3));
+		alloy("constantan_ingot",
+				List.of(new IngredientWithCount(commonTag("ingots/copper"), 1),
+						new IngredientWithCount(commonTag("ingots/nickel"), 1)),
+				ftbicStack("constantan_ingot", 2));
+		alloy("steel_ingot_from_coal",
+				List.of(new IngredientWithCount(Ingredient.of(FTBICItems.INDUSTRIAL_GRADE_METAL.item.get()), 1),
+						new IngredientWithCount(Ingredient.of(Items.COAL), 1)),
+				ftbicStack("steel_ingot", 1));
+		alloy("steel_ingot_from_charcoal",
+				List.of(new IngredientWithCount(Ingredient.of(FTBICItems.INDUSTRIAL_GRADE_METAL.item.get()), 1),
+						new IngredientWithCount(Ingredient.of(Items.CHARCOAL), 1)),
+				ftbicStack("steel_ingot", 1));
+
+		ItemStackTemplate advancedAlloy = new ItemStackTemplate(FTBICItems.ADVANCED_ALLOY.item.get(), 1);
+		alloy("advanced_alloy_steel_bronze_aluminum",
+				List.of(new IngredientWithCount(commonTag("ingots/steel"), 1),
+						new IngredientWithCount(commonTag("ingots/bronze"), 2),
+						new IngredientWithCount(commonTag("ingots/aluminum"), 1)),
+				advancedAlloy);
+		alloy("advanced_alloy_steel_electrum_aluminum",
+				List.of(new IngredientWithCount(commonTag("ingots/steel"), 1),
+						new IngredientWithCount(commonTag("ingots/electrum"), 1),
+						new IngredientWithCount(commonTag("ingots/aluminum"), 1)),
+				advancedAlloy);
+		alloy("advanced_alloy_steel_invar_aluminum",
+				List.of(new IngredientWithCount(commonTag("ingots/steel"), 1),
+						new IngredientWithCount(commonTag("ingots/invar"), 2),
+						new IngredientWithCount(commonTag("ingots/aluminum"), 1)),
+				advancedAlloy);
+	}
+
+	private void alloy(String path, List<IngredientWithCount> inputs, ItemStackTemplate result) {
+		if (result == null) return;
+		MachineRecipe recipe = new MachineRecipe(
+				FTBICRecipes.ALLOY_SMELTING,
+				inputs,
+				List.of(),
+				List.of(new StackWithChance(result, 1D)),
+				List.of(),
+				1D,
+				false);
+		output.accept(recipeKey("alloy_smelting/" + path), recipe, null);
 	}
 
 
@@ -458,7 +506,7 @@ public class FTBICRecipeProvider extends RecipeProvider {
 		if (input == null) return;
 		AntimatterBoostRecipe recipe =
 				new AntimatterBoostRecipe(input, boost);
-		output.accept(recipeKey("antimatter_boost/" + path), recipe, null, conditionsFor(input));
+		output.accept(recipeKey("antimatter_boost/" + path), recipe, null);
 	}
 
 
@@ -504,8 +552,7 @@ public class FTBICRecipeProvider extends RecipeProvider {
 				List.of(),
 				1D,
 				false);
-		output.accept(recipeKey("canning/" + path), recipe, null,
-				withOutputConditions(conditionsFor(a, b), result));
+		output.accept(recipeKey("canning/" + path), recipe, null);
 	}
 
 	private static Ingredient fluidCell(Fluid fluid) {
@@ -519,6 +566,8 @@ public class FTBICRecipeProvider extends RecipeProvider {
 				stack(FTBICItems.ADVANCED_ALLOY.item.get(), 1), 0F, 400);
 		cookSmelt("industrial_grade_metal", commonTag("ingots/iron"),
 				stack(FTBICItems.INDUSTRIAL_GRADE_METAL.item.get(), 1), 0F, 400);
+
+		materialFurnaceRecipes(true);
 	}
 
 	private void blastingRecipes() {
@@ -526,6 +575,72 @@ public class FTBICRecipeProvider extends RecipeProvider {
 				stack(FTBICItems.ADVANCED_ALLOY.item.get(), 1), 0F, 200);
 		cookBlast("industrial_grade_metal", commonTag("ingots/iron"),
 				stack(FTBICItems.INDUSTRIAL_GRADE_METAL.item.get(), 1), 0F, 200);
+
+		materialFurnaceRecipes(false);
+	}
+
+	private void materialFurnaceRecipes(boolean smelt) {
+		for (Material m : Material.values()) {
+			ItemStackTemplate ingot = ingotFor(m);
+			if (ingot == null) continue;
+
+			if (m.has(MaterialComponent.DUST)) {
+				materialCook(smelt, m.key() + "_dust_to_" + ingotPathSuffix(m),
+						Ingredient.of(ftbicItem(m.key() + "_dust")), ingot, 0F);
+			}
+			if (m.has(MaterialComponent.STONE_ORE)) {
+				materialCook(smelt, m.key() + "_stone_ore_to_" + ingotPathSuffix(m),
+						Ingredient.of(ftbicItem(m.key() + "_stone_ore")), ingot, 0.7F);
+			}
+			if (m.has(MaterialComponent.DEEPSLATE_ORE)) {
+				materialCook(smelt, m.key() + "_deepslate_ore_to_" + ingotPathSuffix(m),
+						Ingredient.of(ftbicItem(m.key() + "_deepslate_ore")), ingot, 0.7F);
+			}
+			if (m.has(MaterialComponent.RAW_ORE)) {
+				materialCook(smelt, m.key() + "_raw_ore_to_" + ingotPathSuffix(m),
+						Ingredient.of(ftbicItem(m.key() + "_raw_ore")), ingot, 0.7F);
+			}
+		}
+
+		ItemStackTemplate enderiumIngot = ftbicStack("enderium_ingot", 1);
+		Item enderiumDust = ftbicItem("enderium_dust");
+		if (enderiumIngot != null && enderiumDust != null) {
+			materialCook(smelt, "enderium_dust_to_enderium_ingot",
+					Ingredient.of(enderiumDust), enderiumIngot, 0F);
+		}
+	}
+
+	private ItemStackTemplate ingotFor(Material m) {
+		return switch (m) {
+			case COPPER -> stack(Items.COPPER_INGOT, 1);
+			case GOLD -> stack(Items.GOLD_INGOT, 1);
+			case IRON -> stack(Items.IRON_INGOT, 1);
+			default -> m.has(MaterialComponent.INGOT) ? ftbicStack(m.key() + "_ingot", 1) : null;
+		};
+	}
+
+	private static String ingotPathSuffix(Material m) {
+		return switch (m) {
+			case COPPER -> "copper_ingot";
+			case GOLD -> "gold_ingot";
+			case IRON -> "iron_ingot";
+			default -> m.key() + "_ingot";
+		};
+	}
+
+	private void materialCook(boolean smelt, String path, Ingredient input, ItemStackTemplate result, float xp) {
+		if (input == null || result == null) return;
+		int ticks = smelt ? 200 : 100;
+		String folder = smelt ? "smelting" : "blasting";
+		Recipe<?> r = smelt
+				? new SmeltingRecipe(cookingCommon(), cookingBook(CookingBookCategory.MISC), input, result, xp, ticks)
+				: new BlastingRecipe(cookingCommon(), cookingBook(CookingBookCategory.MISC), input, result, xp, ticks);
+		output.accept(recipeKey(folder + "/" + path), r, null);
+	}
+
+	private static Item ftbicItem(String path) {
+		Item item = BuiltInRegistries.ITEM.getValue(FTBIC.id(path));
+		return item == Items.AIR ? null : item;
 	}
 
 	private void smokingRecipes() {
@@ -539,29 +654,25 @@ public class FTBICRecipeProvider extends RecipeProvider {
 	private void cookSmelt(String path, Ingredient input, ItemStackTemplate result, float xp, int ticks) {
 		if (result == null) return;
 		Recipe<?> r = new SmeltingRecipe(cookingCommon(), cookingBook(CookingBookCategory.MISC), input, result, xp, ticks);
-		output.accept(recipeKey("smelting/" + path), r, null,
-				withOutputConditions(conditionsFor(input), result));
+		output.accept(recipeKey("smelting/" + path), r, null);
 	}
 
 	private void cookBlast(String path, Ingredient input, ItemStackTemplate result, float xp, int ticks) {
 		if (result == null) return;
 		Recipe<?> r = new BlastingRecipe(cookingCommon(), cookingBook(CookingBookCategory.MISC), input, result, xp, ticks);
-		output.accept(recipeKey("blasting/" + path), r, null,
-				withOutputConditions(conditionsFor(input), result));
+		output.accept(recipeKey("blasting/" + path), r, null);
 	}
 
 	private void cookSmoke(String path, Ingredient input, ItemStackTemplate result, float xp, int ticks) {
 		if (result == null) return;
 		Recipe<?> r = new SmokingRecipe(cookingCommon(), cookingBook(CookingBookCategory.FOOD), input, result, xp, ticks);
-		output.accept(recipeKey("smoking/" + path), r, null,
-				withOutputConditions(conditionsFor(input), result));
+		output.accept(recipeKey("smoking/" + path), r, null);
 	}
 
 	private void cookCampfire(String path, Ingredient input, ItemStackTemplate result, float xp, int ticks) {
 		if (result == null) return;
 		Recipe<?> r = new CampfireCookingRecipe(cookingCommon(), cookingBook(CookingBookCategory.FOOD), input, result, xp, ticks);
-		output.accept(recipeKey("campfire_cooking/" + path), r, null,
-				withOutputConditions(conditionsFor(input), result));
+		output.accept(recipeKey("campfire_cooking/" + path), r, null);
 	}
 
 	private static Recipe.CommonInfo cookingCommon() {
@@ -631,7 +742,7 @@ public class FTBICRecipeProvider extends RecipeProvider {
 				new CraftingRecipe.CraftingBookInfo(CraftingBookCategory.MISC, ""),
 				shaped,
 				result);
-		output.accept(recipeKey("shaped/" + name), recipe, null, conditionsFor(allIngredients.toArray(Ingredient[]::new)));
+		output.accept(recipeKey("shaped/" + name), recipe, null);
 	}
 
 	protected void shapeless(String name, ItemStackTemplate result, Ingredient... ingredients) {
@@ -644,7 +755,7 @@ public class FTBICRecipeProvider extends RecipeProvider {
 				new CraftingRecipe.CraftingBookInfo(CraftingBookCategory.MISC, ""),
 				result,
 				List.of(ingredients));
-		output.accept(recipeKey("shapeless/" + name), recipe, null, conditionsFor(ingredients));
+		output.accept(recipeKey("shapeless/" + name), recipe, null);
 	}
 
 
@@ -657,19 +768,13 @@ public class FTBICRecipeProvider extends RecipeProvider {
 				List.of(),
 				1D,
 				false);
-		output.accept(recipeKey(path), recipe, null, withOutputConditions(conditionsFor(input), result));
+		output.accept(recipeKey(path), recipe, null);
 	}
 
 	private static ItemStackTemplate stack(Item item, int count) {
 		return new ItemStackTemplate(item, count);
 	}
 
-	private ItemStackTemplate ftbmat(String path, int count) {
-		Identifier id = Identifier.fromNamespaceAndPath("ftbmaterials", path);
-		Item item = BuiltInRegistries.ITEM.getValue(id);
-		if (item == Items.AIR || item == null) return null;
-		return new ItemStackTemplate(item, count);
-	}
 
 	private static String oreDustName(String oreName) {
 		return switch (oreName) {
@@ -692,83 +797,6 @@ public class FTBICRecipeProvider extends RecipeProvider {
 		return ResourceKey.create(Registries.RECIPE, Identifier.fromNamespaceAndPath(FTBIC.MOD_ID, path));
 	}
 
-	protected static ICondition[] conditionsFor(Ingredient... ingredients) {
-		List<ICondition> conditions = new ArrayList<>();
-		for (Ingredient ing : ingredients) {
-			ICondition c = ingredientCondition(ing);
-			if (c != null) conditions.add(c);
-		}
-		return conditions.toArray(ICondition[]::new);
-	}
-
-	private static ICondition[] withOutputConditions(ICondition[] base, ItemStackTemplate... outputs) {
-		List<String> materials = new ArrayList<>();
-		for (ItemStackTemplate t : outputs) {
-			if (t == null) continue;
-			Identifier id = BuiltInRegistries.ITEM.getKey(t.item().value());
-			if (id == null || !"ftbmaterials".equals(id.getNamespace())) continue;
-			String path = id.getPath();
-			if (!materials.contains(path)) {
-				materials.add(path);
-			}
-		}
-		if (materials.isEmpty()) return base;
-		ICondition[] combined = new ICondition[base.length + 1];
-		System.arraycopy(base, 0, combined, 0, base.length);
-		combined[base.length] = ComponentsAvailableCondition.of(materials.toArray(String[]::new));
-		return combined;
-	}
-
-	private static ICondition ingredientCondition(Ingredient ingredient) {
-		if (ingredient == null) return null;
-		var custom = ingredient.getCustomIngredient();
-		if (custom instanceof CompoundIngredient compound) {
-			List<ICondition> branches = new ArrayList<>();
-			for (Ingredient child : compound.children()) {
-				ICondition c = ingredientCondition(child);
-				if (c != null) branches.add(c);
-			}
-			if (branches.isEmpty()) return null;
-			if (branches.size() == 1) return branches.get(0);
-			return new OrCondition(branches);
-		}
-		if (custom != null) return null;
-		HolderSet<Item> values = ingredient.getValues();
-		if (values == null) return null;
-		return values.unwrapKey().map(tagKey -> {
-			@SuppressWarnings("unchecked")
-			TagKey<Item> itemTag = (TagKey<Item>) (TagKey<?>) tagKey;
-			List<ICondition> parts = new ArrayList<>();
-			parts.add(new NotCondition(new TagEmptyCondition(itemTag)));
-			String material = materialFromTag(itemTag);
-			if (material != null) {
-				parts.add(ComponentsAvailableCondition.of(material));
-			}
-			return parts.size() == 1 ? parts.get(0) : (ICondition) new AndCondition(parts);
-		}).orElse(null);
-	}
-
-	private static String materialFromTag(TagKey<Item> tagKey) {
-		Identifier tid = tagKey.location();
-		if (!"c".equals(tid.getNamespace())) return null;
-		String path = tid.getPath();
-		int slash = path.indexOf('/');
-		if (slash < 0) return null;
-		String typePlural = path.substring(0, slash);
-		String material = path.substring(slash + 1);
-		String typeSingular = switch (typePlural) {
-			case "dusts" -> "dust";
-			case "ingots" -> "ingot";
-			case "plates" -> "plate";
-			case "gears" -> "gear";
-			case "rods" -> "rod";
-			case "nuggets" -> "nugget";
-			default -> null;
-		};
-		if (typeSingular == null) return null;
-		return material + "_" + typeSingular;
-	}
-
 
 	private void shapedBatch() {
 		shaped("advanced_centrifuge", ftbicStack("advanced_centrifuge", 1), new String[] {"CCC", "CFC", "WMW"}, 'C', i("ftbic:fluid_cell"), 'F', i("ftbic:centrifuge"), 'M', i("ftbic:advanced_machine_block"), 'W', i("ftbic:copper_coil"));
@@ -777,11 +805,12 @@ public class FTBICRecipeProvider extends RecipeProvider {
 		shaped("advanced_heat_vent", ftbicStack("advanced_heat_vent", 1), new String[] {"IVI", "IDI", "IVI"}, 'I', i("minecraft:iron_bars"), 'D', commonOrTag("c:gems/diamond"), 'V', i("ftbic:heat_vent"));
 		shaped("advanced_macerator", ftbicStack("advanced_macerator", 1), new String[] {"CCC", "CFC", "WMW"}, 'C', i("ftbic:industrial_grade_metal"), 'F', i("ftbic:macerator"), 'M', i("ftbic:advanced_machine_block"), 'W', i("ftbic:copper_coil"));
 		shaped("advanced_powered_furnace", ftbicStack("advanced_powered_furnace", 1), new String[] {"CCC", "CFC", "WMW"}, 'C', commonOrTag("c:ingots/copper"), 'F', i("ftbic:powered_furnace"), 'M', i("ftbic:advanced_machine_block"), 'W', i("ftbic:copper_coil"));
+		shaped("alloy_smelter", ftbicStack("alloy_smelter", 1), new String[] {"CAC", "FWF", "CDC"}, 'C', i("ftbic:carbon_plate"), 'A', i("ftbic:advanced_circuit"), 'F', i("ftbic:powered_furnace"), 'W', i("ftbic:copper_coil"), 'D', commonOrTag("c:gems/diamond"));
 		shaped("antimatter_crystal", ftbicStack("antimatter_crystal", 1), new String[] {"AAC", "ANA", "CAA"}, 'A', i("ftbic:antimatter"), 'C', i("ftbic:energy_crystal"), 'N', i("minecraft:nether_star"));
 		shaped("antimatter_fabricator", ftbicStack("antimatter_constructor", 1), new String[] {"GCG", "MEM", "GCG"}, 'G', commonOrTag("c:dusts/glowstone"), 'M', i("ftbic:advanced_machine_block"), 'C', i("ftbic:iridium_circuit"), 'E', i("minecraft:nether_star"));
 		shaped("basic_generator", ftbicStack("basic_generator", 1), new String[] {" B ", "MMM", " F "}, 'B', i("ftbic:lv_battery"), 'M', i("ftbic:industrial_grade_metal"), 'F', i("ftbic:iron_furnace"));
 		shaped("battery", ftbicStack("lv_battery", 1), new String[] {" C ", "TRT", "TRT"}, 'C', i("ftbic:lv_cable"), 'T', commonOrTag("c:ingots/tin"), 'R', commonOrTag("c:dusts/redstone"));
-		shaped("bronze_dust", ftbmat("bronze_dust", 4), new String[] {"CC", "CT"}, 'C', commonOrTag("c:dusts/copper"), 'T', commonOrTag("c:dusts/tin"));
+		shaped("bronze_dust", ftbicStack("bronze_dust", 4), new String[] {"CC", "CT"}, 'C', commonOrTag("c:dusts/copper"), 'T', commonOrTag("c:dusts/tin"));
 		shaped("canning_machine", ftbicStack("canning_machine", 1), new String[] {"TCT", "TMT", "TTT"}, 'T', commonOrTag("c:ingots/tin"), 'M', i("ftbic:machine_block"), 'C', i("ftbic:electronic_circuit"));
 		shaped("carbon_boots", ftbicStack("carbon_boots", 1), new String[] {"CEC", "CAC"}, 'C', i("ftbic:carbon_plate"), 'E', i("ftbic:energy_crystal"), 'A', i("minecraft:netherite_boots"));
 		shaped("carbon_chestplate", ftbicStack("carbon_chestplate", 1), new String[] {"CEC", "CAC", "CCC"}, 'C', i("ftbic:carbon_plate"), 'E', i("ftbic:hv_battery"), 'A', i("minecraft:netherite_chestplate"));
@@ -799,10 +828,7 @@ public class FTBICRecipeProvider extends RecipeProvider {
 		shaped("ejector_upgrade", ftbicStack("ejector_upgrade", 1), new String[] {"T T", " P ", "T T"}, 'P', i("minecraft:piston"), 'T', commonOrTag("c:ingots/tin"));
 		shaped("electric_furnace", ftbicStack("powered_furnace", 1), new String[] {" C ", "RFR"}, 'C', i("ftbic:electronic_circuit"), 'R', commonOrTag("c:dusts/redstone"), 'F', i("ftbic:iron_furnace"));
 		shaped("empty_can", ftbicStack("empty_can", 10), new String[] {"T T", "TTT"}, 'T', commonOrTag("c:ingots/tin"));
-		shaped("enderium_dust", ftbicStack("enderium_dust", 2), new String[] {"LLL", "DEE"}, 'L', commonOrTag("c:dusts/lead"), 'D', commonOrTag("c:dusts/diamond"), 'E', commonOrTag("c:ender_pearls"));
-		shaped("enderium_ingot", ftbicStack("enderium_ingot", 2), new String[] {"LLL", "DEE", "F  "}, 'L', compound(commonOrTag("c:dusts/lead"), commonOrTag("c:ingots/lead")), 'D', commonOrTag("c:dusts/diamond"), 'E', commonOrTag("c:ender_pearls"), 'F', i("minecraft:fire_charge"));
 		shaped("enderium_ingot_to_enderium_block", ftbicStack("enderium_block", 1), new String[] {"XXX", "XXX", "XXX"}, 'X', commonOrTag("c:ingots/enderium"));
-		shaped("enderium_wire", ftbicStack("enderium_wire", 6), new String[] {"MMM"}, 'M', commonOrTag("c:ingots/enderium"));
 		shaped("energy_storage_upgrade", ftbicStack("energy_storage_upgrade", 1), new String[] {"PPP", "WBW", "PCP"}, 'P', commonOrTag("minecraft:planks"), 'W', i("ftbic:lv_cable"), 'B', i("ftbic:lv_battery"), 'C', i("ftbic:electronic_circuit"));
 		shaped("ev_battery_box", ftbicStack("ev_battery_box", 1), new String[] {"GCG", "EXE", "GMG"}, 'C', i("ftbic:iridium_circuit"), 'G', i("ftbic:advanced_alloy"), 'E', i("ftbic:antimatter_crystal"), 'X', i("ftbic:hv_battery_box"), 'M', i("ftbic:advanced_machine_block"));
 		shaped("ev_cable", ftbicStack("ev_cable", 6), new String[] {"RRR", "MMM", "RRR"}, 'R', i("ftbic:rubber"), 'M', commonOrTag("c:ingots/enderium"));
@@ -826,7 +852,7 @@ public class FTBICRecipeProvider extends RecipeProvider {
 		shaped("iridium_alloy", ftbicStack("iridium_alloy", 1), new String[] {"IAI", "ADA", "IAI"}, 'I', commonOrTag("c:ingots/iridium"), 'A', i("ftbic:advanced_alloy"), 'D', commonOrTag("c:gems/diamond"));
 		shaped("iridium_neutron_reflector", ftbicStack("iridium_neutron_reflector", 1), new String[] {"NNN", "NPN", "NNN"}, 'N', i("ftbic:thick_neutron_reflector"), 'P', i("ftbic:iridium_alloy"));
 		shaped("iron_furnace", ftbicStack("iron_furnace", 1), new String[] {" I ", "I I", "IFI"}, 'I', commonOrTag("c:ingots/iron"), 'F', i("minecraft:furnace"));
-		shaped("iron_rod", ftbmat("iron_rod", 1), new String[] {"I", "I"}, 'I', commonOrTag("c:ingots/iron"));
+		shaped("iron_rod", ftbicStack("iron_rod", 1), new String[] {"I", "I"}, 'I', commonOrTag("c:ingots/iron"));
 		shaped("iv_cable", ftbicStack("iv_cable", 6), new String[] {"GGG", " C ", "GGG"}, 'G', commonOrTag("c:glass_blocks/colorless"), 'C', i("ftbic:energy_crystal"));
 		shaped("iv_rectifier", ftbicStack("iv_rectifier", 1), new String[] {"RWR", "PTP", "RWR"}, 'R', i("minecraft:redstone_block"), 'W', i("ftbic:ev_cable"), 'P', commonOrTag("c:ingots/iridium"), 'T', i("ftbic:ev_rectifier"));
 		shaped("large_coolant_cell", ftbicStack("large_coolant_cell", 1), new String[] {"TCT", "TAT", "TCT"}, 'T', commonOrTag("c:ingots/tin"), 'C', i("ftbic:medium_coolant_cell"), 'A', i("ftbic:dense_copper_plate"));
@@ -840,9 +866,6 @@ public class FTBICRecipeProvider extends RecipeProvider {
 		shaped("machine_block", ftbicStack("machine_block", 1), new String[] {"MMM", "MFM", "MMM"}, 'M', i("ftbic:industrial_grade_metal"), 'F', i("ftbic:fuse"));
 		shaped("mechanical_elytra", ftbicStack("mechanical_elytra", 1), new String[] {"CBC", "CSC", "VLV"}, 'C', i("ftbic:carbon_plate"), 'B', i("ftbic:mv_battery"), 'L', i("minecraft:elytra"), 'S', i("ftbic:lv_solar_panel"), 'V', i("ftbic:heat_vent"));
 		shaped("medium_coolant_cell", ftbicStack("medium_coolant_cell", 1), new String[] {"TTT", "CCC", "TTT"}, 'T', commonOrTag("c:ingots/tin"), 'C', i("ftbic:small_coolant_cell"));
-		shaped("mixed_metal_blend_1", ftbicStack("mixed_metal_blend", 3), new String[] {"III", "OOO", "PPP"}, 'I', compound(commonOrTag("c:dusts/iron"), commonOrTag("c:dusts/lead")), 'O', commonOrTag("c:dusts/bronze"), 'P', compound(commonOrTag("c:dusts/tin"), commonOrTag("c:dusts/aluminum")));
-		shaped("mixed_metal_blend_2", ftbicStack("mixed_metal_blend", 3), new String[] {"III", "OOO", "PPP"}, 'I', compound(commonOrTag("c:dusts/iron"), commonOrTag("c:dusts/lead")), 'O', commonOrTag("c:dusts/electrum"), 'P', compound(commonOrTag("c:dusts/tin"), commonOrTag("c:dusts/aluminum")));
-		shaped("mixed_metal_blend_3", ftbicStack("mixed_metal_blend", 3), new String[] {"III", "OOO", "PPP"}, 'I', compound(commonOrTag("c:dusts/iron"), commonOrTag("c:dusts/lead")), 'O', commonOrTag("c:dusts/constantan"), 'P', compound(commonOrTag("c:dusts/tin"), commonOrTag("c:dusts/aluminum")));
 		shaped("mv_battery_box", ftbicStack("mv_battery_box", 1), new String[] {"WBW", "BMB", "WBW"}, 'W', i("ftbic:mv_cable"), 'B', i("ftbic:energy_crystal"), 'M', i("ftbic:machine_block"));
 		shaped("mv_cable", ftbicStack("mv_cable", 6), new String[] {"RRR", "MMM", "RRR"}, 'R', i("ftbic:rubber"), 'M', commonOrTag("c:ingots/aluminum"));
 		shaped("mv_rectifier", ftbicStack("mv_rectifier", 1), new String[] {"RWR", "PTP", "RWR"}, 'R', i("minecraft:redstone"), 'W', i("ftbic:mv_cable"), 'P', commonOrTag("c:ingots/iron"), 'T', i("ftbic:mv_transformer"));
@@ -883,10 +906,9 @@ public class FTBICRecipeProvider extends RecipeProvider {
 		shapeless("advanced_circuit", ftbicStack("advanced_circuit", 1), commonOrTag("c:dusts/redstone"), commonOrTag("c:dusts/glowstone"), commonOrTag("c:dusts/redstone"), commonOrTag("c:silicon"), i("ftbic:electronic_circuit"), commonOrTag("c:silicon"), commonOrTag("c:dusts/redstone"), commonOrTag("c:dusts/glowstone"), commonOrTag("c:dusts/redstone"));
 		shapeless("advanced_machine_block", ftbicStack("advanced_machine_block", 1), i("ftbic:copper_coil"), i("ftbic:carbon_plate"), i("ftbic:copper_coil"), i("ftbic:advanced_alloy"), i("ftbic:machine_block"), i("ftbic:advanced_alloy"), i("ftbic:copper_coil"), i("ftbic:carbon_plate"), i("ftbic:copper_coil"));
 		shapeless("carbon_fiber_mesh", ftbicStack("carbon_fiber_mesh", 1), i("ftbic:carbon_fibers"), i("ftbic:carbon_fibers"), i("ftbic:carbon_fibers"), i("ftbic:carbon_fibers"));
-		shapeless("constantan_dust", ftbmat("constantan_dust", 2), commonOrTag("c:dusts/copper"), commonOrTag("c:dusts/nickel"));
 		shapeless("containment_reactor_plating", ftbicStack("containment_reactor_plating", 1), i("ftbic:reactor_plating"), i("ftbic:advanced_alloy"), i("ftbic:advanced_alloy"));
 		shapeless("electronic_circuit", ftbicStack("electronic_circuit", 1), i("ftbic:lv_cable"), i("ftbic:lv_cable"), i("ftbic:lv_cable"), commonOrTag("c:dusts/redstone"), i("ftbic:industrial_grade_metal"), commonOrTag("c:dusts/redstone"), i("ftbic:lv_cable"), i("ftbic:lv_cable"), i("ftbic:lv_cable"));
-		shapeless("electrum_dust", ftbmat("electrum_dust", 2), commonOrTag("c:dusts/gold"), commonOrTag("c:dusts/silver"));
+		shapeless("electrum_dust", ftbicStack("electrum_dust", 2), commonOrTag("c:dusts/gold"), commonOrTag("c:dusts/silver"));
 		shapeless("enderium_block_to_enderium_ingot", ftbicStack("enderium_ingot", 9), commonOrTag("c:storage_blocks/enderium"));
 		shapeless("enderium_ingot_to_enderium_nugget", ftbicStack("enderium_nugget", 9), commonOrTag("c:ingots/enderium"));
 		shapeless("energy_crystal", ftbicStack("energy_crystal", 1), commonOrTag("c:dusts/redstone"), commonOrTag("c:dusts/glowstone"), commonOrTag("c:dusts/redstone"), commonOrTag("c:silicon"), commonOrTag("c:gems/diamond"), commonOrTag("c:silicon"), commonOrTag("c:dusts/redstone"), commonOrTag("c:dusts/glowstone"), commonOrTag("c:dusts/redstone"));
